[gd_scene load_steps=17 format=3 uid="uid://jr7d1wady43a"]

[ext_resource type="Script" path="res://scripts/bubble_player.gd" id="1_v6ibo"]
[ext_resource type="PackedScene" uid="uid://cih1h4rsfonlq" path="res://scenes/bubble_projectile.tscn" id="3_fgdmr"]
[ext_resource type="Texture2D" uid="uid://230wje3eden2" path="res://assats/FishIdle.png" id="3_yhjv0"]
[ext_resource type="Texture2D" uid="uid://by6ovuow1jr1t" path="res://assats/BubbleShootPointer.png" id="4_0y6hu"]
[ext_resource type="Texture2D" uid="uid://cx2vsjtcfls2u" path="res://assats/BigBubble-Sheet.png" id="4_ir7wu"]
[ext_resource type="Texture2D" uid="uid://cgydnwcaje4g5" path="res://assats/BigBubbleShoot-Sheet.png" id="5_dx2iv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d743n"]
radius = 40.05

[sub_resource type="SpriteFrames" id="SpriteFrames_jr56k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yhjv0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4y8tl"]
atlas = ExtResource("4_ir7wu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocv7v"]
atlas = ExtResource("4_ir7wu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_300vq"]
atlas = ExtResource("4_ir7wu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykn1w"]
atlas = ExtResource("4_ir7wu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2vgh"]
atlas = ExtResource("4_ir7wu")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kknud"]
atlas = ExtResource("5_dx2iv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g55nn"]
atlas = ExtResource("5_dx2iv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_daose"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y8tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocv7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_300vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykn1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2vgh")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kknud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g55nn")
}],
"loop": true,
"name": &"shoot",
"speed": 12.0
}]

[node name="BubblePlayer" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 9
motion_mode = 1
script = ExtResource("1_v6ibo")
bubble_projectile = ExtResource("3_fgdmr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_d743n")

[node name="FishSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_jr56k")

[node name="Axis" type="Node2D" parent="."]

[node name="BubbleSpawn" type="Sprite2D" parent="Axis"]
position = Vector2(54, -1)
texture = ExtResource("4_0y6hu")

[node name="BubbleSprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.47451)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_daose")
animation = &"shoot"
frame_progress = 0.626887
